force-app/main/default/objects/GYNCO_Quote__c/GYNCO_Quote__c.object-meta.xml
<CustomObject>
    <label>SAP Quote</label>
    <nameField>
        <label>Quote Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>