force-app/main/default/objects/GYNCO_Quote__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Billing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>