force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Additional_To__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Additional_To__c</fullName>
    <label>Additional To</label>
    <type>TextArea</type>
</CustomField>