force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Bill_To_Name__c</fullName>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>