force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_BillingStatus__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_BillingStatus__c</fullName>
    <label>BillingStatus</label>
    <length>2</length>
    <type>Text</type>
</CustomField>