force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Category__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Category__c</fullName>
    <label>Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>