force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Channel__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Channel__c</fullName>
    <label>Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>