force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>