force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Contract__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>