force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Date_Range__c</fullName>
    <label>Date Range</label>
    <type>Date</type>
</CustomField>