force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_DeliveryStatus__c</fullName>
    <label>DeliveryStatus</label>
    <length>2</length>
    <type>Text</type>
</CustomField>