force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Description__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>