force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Discount__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>