force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_DocumentType__c</fullName>
    <label>DocumentType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>