force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Email__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>