force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>