force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Grand_Total__c</fullName>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>