force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Net_Value__c</fullName>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>