force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>