force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_PaymentTerms__c</fullName>
    <label>PaymentTerms</label>
    <length>10</length>
    <type>Text</type>
</CustomField>