force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Phone__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>