force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Quote_To_Name__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Quote_To_Name__c</fullName>
    <label>Quote To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>