force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_ReferenceDocument__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ReferenceDocument__c</fullName>
    <label>ReferenceDocument</label>
    <length>10</length>
    <type>Text</type>
</CustomField>