force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_RequestedDeliveryDate__c</fullName>
    <label>RequestedDeliveryDate</label>
    <type>Date</type>
</CustomField>