force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SalesOrganization__c</fullName>
    <label>SalesOrganization</label>
    <length>4</length>
    <type>Text</type>
</CustomField>