force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_SAP_CreationDate__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SAP_CreationDate__c</fullName>
    <label>SAP CreationDate</label>
    <type>Date</type>
</CustomField>