force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Shipping_and_Handling__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Shipping_and_Handling__c</fullName>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>