force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ShipTo__c</fullName>
    <label>ShipTo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>