force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_ShipToName__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ShipToName__c</fullName>
    <label>ShipToName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>