force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Sold_To__c</fullName>
    <label>Sold To</label>
    <length>10</length>
    <type>Text</type>
</CustomField>