force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Syncing__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Syncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syncing</label>
    <type>Checkbox</type>
</CustomField>