force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_Tax__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Tax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>