force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_TotalFreight__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_TotalFreight__c</fullName>
    <label>TotalFreight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>