force-app/main/default/objects/GYNCO_Quote__c/fields/GYNCF_TotalTax__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_TotalTax__c</fullName>
    <label>TotalTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>