force-app/main/default/objects/GYNCO_Quote__c/fields/ZZDATE__c.field-meta.xml
<CustomField>
    <fullName>ZZDATE__c</fullName>
    <label>ZZDATE</label>
    <type>Date</type>
</CustomField>