force-app/main/default/objects/GYNCO_Quote__c/fields/ZZUSERNAME__c.field-meta.xml
<CustomField>
    <fullName>ZZUSERNAME__c</fullName>
    <label>ZZUSERNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>