force-app/main/default/objects/GYNCO_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>GYNCF_DocumentType__c</columns>
    <columns>GYNCF_Net_Value__c</columns>
    <columns>GYNCF_TotalTax__c</columns>
    <columns>GYNCF_TotalFreight__c</columns>
    <filterScope>Everything</filterScope>
    <label>SAP Quotes</label>
</ListView>